# Systematic-Strategy-Backtester-Performance-Attribution-Platform

./: .gitignore  README.md  pyproject.toml
configs/: 40_60.yaml  60_40.yaml  buy_and_hold_60_40.yaml  equal_weight.yaml  glide_path.yaml  inverse_vol.yaml  min_variance.yaml  risk_parity_erc.yaml  target_vol.yaml
notebooks/: demo.ipynb
reports/sample/: comparison_report.html  comparison_summary.csv
src/backtester/: __init__.py  __main__.py  analysis.py  attribution.py  cli.py  config.py  data.py  engine.py  metrics.py  plotting.py  rebalance.py  report.py  strategies.py
tests/: conftest.py  test_data.py  test_engine.py  test_metrics.py  test_rebalance.py  test_strategies.py
