[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation-backtester"
version = "0.1.0"
description = "Config-driven, multi-strategy asset-allocation backtester with a from-scratch, benchmark-relative analytics engine."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rohan" }]
requires-python = ">=3.9"

# Pinned to ranges that are known to resolve on CPython 3.9 (the target runtime).
# Upper caps guard against major-version breakage; lower bounds guarantee the
# APIs this project relies on (pandas 2.x resample codes, numpy typing, etc.).
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<2.3",
    "scipy>=1.10,<1.14",
    "yfinance>=0.2.40,<0.3",
    "PyYAML>=6.0,<7.0",
    "matplotlib>=3.7,<3.10",
    "pyarrow>=14.0",
    "Jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    # Cross-check libraries used ONLY in tests to validate our hand-rolled math.
    # Import-guarded so the suite still runs if they are absent.
    "quantstats>=0.0.62",
    "empyrical-reloaded>=0.5.9",
    "jupyter>=1.0",
]

[project.scripts]
backtester = "backtester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.package-data]
backtester = ["py.typed"]
